src/cli/tasks/snapshots/mise__cli__tasks__ls__tests__task_ls_json.snap
---
source: src/cli/tasks/ls.rs
expression: output
---
[
  {
    "description": "",
    "name": "configtask",
    "source": "~/config/config.toml"
  },
  {
    "description": "This is a test build script",
    "name": "filetask",
    "source": "~/cwd/.mise/tasks/filetask"
  },
  {
    "description": "",
    "name": "lint",
    "source": "~/config/config.toml"
  },
  {
    "description": "",
    "name": "test",
    "source": "~/config/config.toml"
  }
]
