src/cli/tasks/snapshots/mise__cli__tasks__ls__tests__task_ls_json_extended.snap
---
source: src/cli/tasks/ls.rs
expression: output
snapshot_kind: text
---
[
  {
    "alias": "",
    "description": "",
    "name": "configtask",
    "source": "~/config/config.toml"
  },
  {
    "alias": "ft",
    "description": "This is a test build script",
    "name": "filetask",
    "source": "~/cwd/.mise/tasks/filetask"
  },
  {
    "alias": "",
    "description": "",
    "name": "lint",
    "source": "~/config/config.toml"
  },
  {
    "alias": "",
    "description": "",
    "name": "shell",
    "source": "~/config/config.toml"
  },
  {
    "alias": "",
    "description": "",
    "name": "shell invalid",
    "source": "~/config/config.toml"
  },
  {
    "alias": "",
    "description": "",
    "name": "test",
    "source": "~/config/config.toml"
  }
]
